--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@nuxt/content": "3.6.1",
     "@nuxt/eslint": "1.4.1",
     "@nuxt/image": "1.10.0",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@tailwindcss/vite": "^4.1.11",
     "better-sqlite3": "^12.2.0",
     "eslint": "^9.30.0",
     "nuxt": "^3.17.5",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   }
