--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@nuxt/icon": "1.15.0",
     "@nuxt/image": "1.10.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@tailwindcss/vite": "^4.1.11",
     "better-sqlite3": "^12.2.0",
+    "dayjs": "^1.11.13",
     "eslint": "^9.30.0",
     "nuxt": "^3.17.5",
     "tailwindcss": "^4.1.11",
