--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dayjs": "^1.11.13",
     "eslint": "^9.30.0",
     "nuxt": "^3.17.5",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
