--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ NUXT_PUBLIC_SITE_URL=example.com
 NUXT_PUBLIC_BASE_URL=https://example.com
 NUXT_PUBLIC_AUTHOR=John Doe
 NUXT_PUBLIC_SITE_NAME=John's Blog
+# Fonts, please preserve last slash
+NUXT_PUBLIC_FONTS_URL=https://fonts.example.com/
