--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,15 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "22"
-      # Pick your own package manager and build script
-      - run: pnpm install
-      - run: pnpx nuxt build --preset github_pages
+      - name: Install dependencies
+        run: pnpm install
+      - name: Generate static pages
+        run: pnpx nuxt build --preset github_pages
+        env:
+          NUXT_PUBLIC_SITE_URL: ${{ vars.NUXT_PUBLIC_SITE_URL }}
+          NUXT_PUBLIC_SITE_NAME: ${{ vars.NUXT_PUBLIC_SITE_NAME }}
+          NUXT_PUBLIC_BASE_URL: ${{ vars.NUXT_PUBLIC_BASE_URL }}
+          NUXT_PUBLIC_AUTHOR: ${{ vars.NUXT_PUBLIC_AUTHOR }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
