--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NUXT_PUBLIC_SITE_URL=example.com
 NUXT_PUBLIC_BASE_URL=https://example.com
 NUXT_PUBLIC_AUTHOR=John Doe
-NUXT_PUBLIC_SITE_NAME=John's Blog
+NUXT_PUBLIC_SITE_NAME="John's Blog"
+NUXT_PUBLIC_BUILD_BASE_URL=/
 # Fonts, please preserve last slash
 NUXT_PUBLIC_FONTS_URL=https://fonts.example.com/
