--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "nuxt-app",
+  "name": "@techitwinner/web",
+  "version": "16.0.9",
   "private": true,
   "type": "module",
   "scripts": {
