--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "content"]
 	path = content
-	url = git@github.com:techitwinner/web-content.git
+	url = https://github.com/techitwinner/web-content.git
 	branch = main
