Add support for configurable web banner data url

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ NUXT_PUBLIC_SITE_NAME="John's Blog"
 NUXT_PUBLIC_BUILD_BASE_URL=/
 # Fonts, please preserve last slash
 NUXT_PUBLIC_FONTS_URL=https://fonts.example.com/
+
+NUXT_PUBLIC_BANNER_DATA_URL=https://example.com/api/web/banner/latest
